# pizza-violations-detector-

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
infra/rabbitmq/: rabbitmq.conf
services/: README.md
services/broker/: .env.example  Dockerfile  README.md  main.py
services/broker/app/: __init__.py
services/broker/clients/: README.md
services/broker/database/: README.md
services/broker/migrations/: README.md
services/broker/repositories/: README.md
services/broker/scripts/: README.md
services/detection/: Dockerfile  README.md  main.py  requirements.txt
services/detection/app/: __init__.py
services/detection/clients/: README.md
services/detection/database/: README.md
services/detection/migrations/: README.md
services/detection/repositories/: README.md
services/detection/scripts/: README.md
services/detection/src/: __init__.py  main.py
services/docs/: 01-Architecture.md  02-Data-Flow-and-Broker.md  03-Detection-and-Violation-Logic.md  04-Streaming-and-Frontend.md
services/docs/plan/: 01-frame-reader.md  02-message-broker.md  03-detection.md  04-streaming.md  05-frontend.md  06-config-roi.md
services/frame_reader/: README.md  main.py  requirements.txt
services/frame_reader/app/: __init__.py
services/frame_reader/clients/: README.md
services/streaming/: Dockerfile  README.md  main.py  requirements.txt
shared/: __init__.py  env_paths.py  pika_connection.py  rabbitmq.py  schemas.py
(+46 files in other folders)
