[tool.poetry]
name = "pizza-violations"
version = "0.1.0"
description = "Pizza store scooper violation detection — microservices (Python, Poetry, Pydantic)"
readme = "README.md"
license = "MIT"
packages = [{ include = "shared" }]

[tool.poetry.dependencies]
# Prefer Python 3.11–3.12 locally for wheel support (torch/asyncpg). CI/Docker use 3.11-slim.
python = "^3.11"
pydantic = "^2.6"
pydantic-settings = "^2.2"
python-dotenv = "^1.0"
pika = "^1.3"
numpy = "^2.0"
opencv-python-headless = "^4.8"
fastapi = "^0.109"
uvicorn = { version = "^0.27", extras = ["standard"] }

[tool.poetry.group.database.dependencies]
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.29"

[tool.poetry.group.detection.dependencies]
ultralytics = "^8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
